# gas-swelling-model

./: .buildinfo  .gitignore  1d_radial_model.html  BACKWARD_COMPATIBILITY_SUMMARY.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  PROGRESS_TRACKING.md  QUICKSTART.md  README.md  REFACTORING.md  SUBTASK_1-3_COMPLETION.md  THEORY_DOCUMENTATION.md  VERIFICATION_SUMMARY.md  adaptive_stepping.html  api.html  backward_compatibility_report.md  build_docs.py  check_numpy.py  cli_error_tests_summary.md  example_parameter_sweep.py  final_test_results.txt  genindex.html  index.html  learning_paths.html  model_design.md  modelrk23.py  objects.inv  original paper of swelling rate theory.md  parameter_reference.html  parameter_sweep.py  parameters.py  pyproject.toml  requirements.txt  run_test.py  sampling_strategies.py  search.html  (+36 more)
.doctrees/: 1d_radial_model.doctree  adaptive_stepping.doctree  api.doctree  environment.pickle  index.doctree  learning_paths.doctree  parameter_reference.doctree  sensitivity_analysis_guide.doctree  validation_guide.doctree
_modules/: index.html  modelrk23.html  parameters.html
_sources/: 1d_radial_model.md.txt  adaptive_stepping.md.txt  index.rst.txt  learning_paths.md.txt  sensitivity_analysis_guide.md.txt  validation_guide.md.txt
cli/: __init__.py  __main__.py  config.py  main.py  output.py  progress.py
docs/: 1d_radial_model.md  Makefile  adaptive_stepping.md  api.rst  conf.py  parameter_reference.md  requirements.txt  sensitivity_analysis_guide.md  validation_guide.md
examples/: README.md  __init__.py  adaptive_stepping_demo.py  config_example.yaml  example_enhanced_visualization.py  plotting_examples.py  qssa_benchmark.py  quickstart_simple.py  radial_simulation_tutorial.py  radial_temperature_profile_demo.py  run_simulation.py  sensitivity_morris_example.py  sensitivity_oat_example.py  sensitivity_sobol_example.py  temperature_sweep_plotting.py
gas_swelling/: __init__.py
gas_swelling_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
guides/: interpreting_results.html  plot_gallery.html  repository_guide.html  troubleshooting.html
notebooks/: 02_Parameter_Sweep_Studies.ipynb  03_Gas_Distribution_Analysis.ipynb  04_Experimental_Data_Comparison.ipynb  06_Advanced_Analysis_Techniques.ipynb  Temperature_Sweep_Example.ipynb
params/: __init__.py  parameters.py
scripts/: test_safe.py  test_safe.sh
tests/: E2E_TEST_SUMMARY.md  README.md  __init__.py  conftest.py  test_adaptive_accuracy.py  test_adaptive_performance.py  utils.py  (+33 more)
(+112 files in other folders)
