[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-swelling-model"
version = "0.1.0"
description = "A scientific computing package for modeling fission gas bubble evolution and void swelling behavior in irradiated metallic fuels"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gas Swelling Model Contributors"}
]
maintainers = [
    {name = "Gas Swelling Model Contributors"}
]
keywords = [
    "nuclear",
    "fuel",
    "swelling",
    "fission-gas",
    "metallic-fuel",
    "u-zr",
    "u-pu-zr",
    "rate-theory",
    "scientific-computing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
all = [
    "gas-swelling-model[plotting,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/gas-swelling-model"
Documentation = "https://github.com/yourusername/gas-swelling-model/blob/main/README.md"
Repository = "https://github.com/yourusername/gas-swelling-model"
Issues = "https://github.com/yourusername/gas-swelling-model/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["gas_swelling*"]
namespaces = false

[tool.setuptools.package-data]
gas_swelling = ["*.py", "*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gas_swelling"]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
